이미 저장된 태그와 신규로 추가된 태그들의 중복도 검사하도록 변경 및 polishing